# Stomi

./: .gitignore  .gitmodules  COPYING  Doxyfile.in  README.md  exampleDatabaseGeneratorSettings.in  exampleRandomWalkDatabaseGeneratorSettings.in  exampleRandomWalkSimulatorSettings.in  exampleTestParticleDatabaseGeneratorSettings.in  exampleTestParticleSimulatorSettings.in
CMakeModules/: FindAssist.CMake  FindAssist.cmake  FindSQLiteCpp.cmake  FindTudat.cmake  FindTudatCore.cmake
Config/: exampleRandomWalkDatabaseGeneratorSettings.cfg  exampleRandomWalkSimulatorSettings.cfg  exampleTestParticleDatabaseGeneratorSettings.cfg  exampleTestParticleSimulatorSettings.cfg
Documentation/: annotated.html  basics_8h.html  (+75 more)
StoMi/Astrodynamics/: CMakeLists.txt  body.h  dataUpdater.h  hillSphere.h  propagationDataPoint.cpp  propagationDataPoint.h  randomWalkFunctions.cpp  randomWalkFunctions.h
StoMi/Astrodynamics/UnitTests/: unitTestAstrodynamics.cpp  unitTestDataUpdater.cpp  unitTestRandomWalkFunctions.cpp
StoMi/Basics/: CMakeLists.txt  basics.cpp  basics.h
StoMi/Database/: CMakeLists.txt  databaseReadFunctions.cpp  databaseReadFunctions.h  databaseWriteFunctions.cpp  databaseWriteFunctions.h  randomWalkCase.cpp  randomWalkCase.h  randomWalkInput.cpp  randomWalkInput.h  testParticleCase.cpp  testParticleCase.h  testParticleInput.cpp  testParticleInput.h  testParticleKick.cpp  testParticleKick.h
StoMi/Database/UnitTests/: testDataRandomWalkInputTable.csv  testDataRandomWalkPerturberTable.csv  testDataRandomWalkSinglePerturberList.csv  testDataSelectedRandomWalkInputTable.csv  testDatabaseEmptyRandomWalkOutputTable.sqlite  testDatabaseEmptyTestParticleKickTable.sqlite  testDatabaseRandomWalkCase.sqlite  testDatabaseRandomWalkInputTable.sqlite  unitTestDatabaseReadFunctions.cpp  unitTestDatabaseWriteFunctions.cpp  unitTestRandomWalkCase.cpp  unitTestRandomWalkInput.cpp  unitTestTestParticleCase.cpp  unitTestTestParticleInput.cpp  unitTestTestParticleKick.cpp
StoMi/InputOutput/: CMakeLists.txt  dictionaries.cpp  dictionaries.h
StochasticMigration/: CMakeLists.txt
StochasticMigration/Applications/: databaseGenerator.cpp  randomWalkDatabaseGenerator.cpp  randomWalkSimulator.cpp  sandbox.cpp  stochasticMigrationDatabaseGenerator.cpp  temp.cpp  testParticleDatabaseGenerator.cpp  testParticleSimulator.cpp  testParticleSimulator.h
StochasticMigration/Astrodynamics/: CMakeLists.txt  hillSphere.h  propagationDataPoint.cpp  propagationDataPoint.h  randomWalkFunctions.cpp  randomWalkFunctions.h  testParticlePropagationFunctions.cpp  testParticlePropagationFunctions.h
StochasticMigration/Astrodynamics/UnitTests/: unitTestRandomWalkFunctions.cpp
StochasticMigration/Basics/: CMakeLists.txt  basics.cpp  basics.h  void.cpp
StochasticMigration/Database/: CMakeLists.txt  databaseHelpFunctions.cpp  databaseHelpFunctions.h  databaseReadFunctions.cpp  databaseReadFunctions.h  databaseWriteFunctions.cpp  databaseWriteFunctions.h  randomWalkCase.h  randomWalkInput.cpp  randomWalkInput.h  randomWalkMonteCarloRun.cpp  randomWalkMonteCarloRun.h  randomWalkPerturber.cpp  randomWalkPerturber.h  testParticleCase.cpp  testParticleCase.h  testParticleInput.cpp  testParticleInput.h  testParticleKick.cpp  testParticleKick.h
StochasticMigration/Database/UnitTests/: testDataRandomWalkPerturberTable.csv  testDataSelectedTestParticleInputTable.csv  testDataSelectedTestParticleKickTable.csv  testDataTestParticleInputTable.csv  testDataTestParticleKickTable.csv  testDataWriteKickTableToDatabase.csv  testDatabaseMultipleTestParticleCases.db  testDatabaseRandomWalkPerturberTable.db  testDatabaseTestParticleCase.db  testDatabaseTestParticleCase.sqlite  testDatabaseTestParticleCaseMultipleError.sqlite  testDatabaseTestParticleInputTable.db  testDatabaseTestParticleInputTable.sqlite  testDatabaseTestParticleKickTable.db  unitTestDatabaseReadFunctions.cpp  unitTestDatabaseWriteFunctions.cpp  unitTestRandomWalkCase.cpp  unitTestRandomWalkMonteCarloRun.cpp  unitTestRandomWalkPerturber.cpp  unitTestTestParticleCase.cpp  unitTestTestParticleInput.cpp  unitTestTestParticleKick.cpp
StochasticMigration/InputOutput/: CMakeLists.txt  basicInputOutput.cpp  basicInputOutput.h  dictionaries.cpp  dictionaries.h
StochasticMigration/InputOutput/UnitTests/: unitTestBasicInputOutput.cpp
Stomi/Astrodynamics/: CMakeLists.txt  body.h  dataUpdater.h  propagationDataPoint.cpp  propagationDataPoint.h  randomWalkFunctions.cpp  randomWalkFunctions.h
Stomi/Astrodynamics/UnitTests/: unitTestAstrodynamics.cpp  unitTestBody.cpp  unitTestDataUpdater.cpp  unitTestRandomWalkFunctions.cpp
Stomi/Database/: CMakeLists.txt  databaseReadFunctions.cpp  databaseReadFunctions.h  databaseWriteFunctions.cpp  databaseWriteFunctions.h  randomWalkCase.cpp  randomWalkInput.cpp  randomWalkInput.h  randomWalkRun.cpp  randomWalkRun.h  testParticleCase.cpp  testParticleCase.h  testParticleInput.cpp  testParticleInput.h  testParticleKick.cpp  testParticleKick.h
Stomi/Database/UnitTests/: testDataSelectedRandomWalkPerturberTable.csv  testDataSelectedTestParticleKickTable.csv  testDataWriteRandomWalkOutputTable.csv  testDataWriteTestParticleKickTable.csv  testDatabaseEmptyRandomWalkOutputTable.sqlite  testDatabaseEmptyTestParticleKickTable.sqlite  testDatabaseRandomWalkCaseMultipleError.sqlite  testDatabaseRandomWalkInputTable.sqlite  testDatabaseRandomWalkRun.sqlite  testDatabaseRandomWalkRunMultipleError.sqlite  testDatabaseTestParticleCase.sqlite  testDatabaseTestParticleCaseMultipleError.sqlite  testDatabaseTestParticleInputTable.sqlite  testDatabaseTestParticleKickTable.sqlite  unitTestDatabase.cpp  unitTestDatabaseReadFunctions.cpp  unitTestDatabaseWriteFunctions.cpp  unitTestRandomWalkCase.cpp  unitTestRandomWalkInput.cpp  unitTestRandomWalkRun.cpp  unitTestTestParticleCase.cpp  unitTestTestParticleInput.cpp  unitTestTestParticleKick.cpp
Stomi/InputOutput/: CMakeLists.txt  dictionaries.cpp  dictionaries.h  rootPath.h
Stomi/InputOutput/UnitTests/: unitTestRootPath.cpp
Stomi/Mathematics/: CMakeLists.txt  basicMathematics.cpp  basicMathematics.h
(+145 files in other folders)
